# perception-stuff

./: .gitignore  CMakeLists.txt  README.md  main.cpp
CMake/macros/: get_3rd_party_libraries.cmake  libhelpers.cmake
src/: CMakeLists.txt
src/00-Setup/: 01-Install-Windows.md  01-Windows-x86.md  02-Ubuntu-x86-OSS.md  98-Install-Ubuntu-OSS.md  README.md
src/01-Language/: readme.md
src/01-Language/00-HelloWorld/: CMakeLists.txt  main.cpp  readme.md
src/01-Language/01-Integers/: CMakeLists.txt  main.cpp  main.hpp  readme.md
src/01-Language/02-Control-Flow/: CMakeLists.txt  main.cpp  main.hpp  readme.md
src/01-Language/03-Floats/: CMakeLists.txt  main.cpp  main.hpp  readme.md
src/02-Theory/: CMakeLists.txt
src/03-Tools/: CMakeLists.txt
src/03-Tools/00-OpenCV/: CMakeLists.txt
src/03-Tools/00-OpenCV/08-Video/: CMakeLists.txt  main.cpp  readme.md
src/03-Tools/02-CUDA/07-Hello-CUDA/: readme.md
src/99-My-Sketches/99-Template/: CMakeLists.txt  main.cpp  readme.md
